# chessboard

./: pyproject.toml
chessboard/: chessflask.py
chessboard/templates/: main_page_template.html
