[tool.poetry]
name = "chessboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
chess = "^1.9.3"
berserk = "^0.10.0"
flask = "^2.2.2"
ipykernel = "^6.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
